--- a/youtube.html
+++ b/youtube.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <title>YouTube.com Clone</title>
+    <style>
+      .thumbnail {
+        width: 300px;
+      }
+    </style>
+  </head>
+  <body>
+    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+    <input class="search-bar" type="text" placeholder="Search">
+    
+  </body>
 </html>
